--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "wozien <571455773@qq.com>",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "dev": "webpack-dev-server --host 0.0.0.0 --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "lint": "eslint --ext .js,.vue src",
     "build": "node build/build.js"
@@ -16,7 +16,9 @@
     "better-scroll": "^1.14.1",
     "create-keyframe-animation": "^0.1.0",
     "fastclick": "^1.0.6",
+    "js-base64": "^2.5.1",
     "jsonp": "^0.2.1",
+    "lyric-parser": "^1.0.1",
     "vue": "^2.5.2",
     "vue-lazyload": "^1.2.6",
     "vue-router": "^3.0.1",
